Calculation Webpage --Bootstrap & JavaScript-Modified

--- a/Assignment3.html
+++ b/Assignment3.html
@@ -395,10 +395,9 @@
         </div>
 
     </div>
-
     <br>
-    <footer class="container">
-        <div class="footerContainer container">
+    <footer>
+        <div class="footerContainer">
           <div class="socialIcons">
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
               <a href="#"><i class="fa-brands fa-instagram"></i></a>
