A sample static web page using bootstrap

--- a/CSE.html
+++ b/CSE.html
@@ -170,7 +170,7 @@
         </div>
     
     
-        <div class="container-fluid px-5 bg">
+        <div class="container px-5 bg">
         <br>
         <img src="https://images.shiksha.com/mediadata/images/1493115049phpLaFQlW.png" alt="webp-images"
             class="img-fluid img-thumbnail rounded mx-auto d-block">
